# tls-client-python

./: .gitignore  MANIFEST.in  Readme.md  client.go  client_options.go  pyproject.toml  setup.py  tcp_fingerprint.go  tcp_socket_unix.go  tcp_socket_windows.go  test_fingerprints.py  test_integration.py
.github/workflows/: build_binding.yml  build_workflow.yml
cffi_binding/: build_binding.py  main.go  pool_test.go  tls_client_wrapper.py
cffi_dist/: go.mod  go.sum
cffi_dist/example_python/: example.py  example_cookies.py  example_custom_client.py  example_image.py  example_image_upload.py  example_post.py
cffi_dist/example_typescript/src/samples/: async.ts  sync.ts
cffi_src/: factory.go  types.go
example/: main.go
profiles/: profiles.go
tests/: client_test.go  client_test_utils.go  cookie_jar_test.go  firefox_unsupported_group_test.go  header_order_test.go  hooks_test.go  http3_chrome_cloudflare_test.go  http3_test.go  random_extension_order_test.go
tls_client/: __init__.py  _core.py  _default_headers.py
