[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-client-python"
description = "High-performance Python binding for bogdanfinn/tls-client via CFFI – zero-copy, panic-proof, full TLS fingerprint control"
readme = { file = "Readme.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "komAAmok" }
]
keywords = [
    "tls",
    "tls-fingerprint",
    "http-client",
    "ja3",
    "http2",
    "http3",
    "quic",
    "cffi",
    "akamai",
    "cloudflare",
    "anti-bot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


requires-python = ">=3.6, <3.13"

dependencies = [
    "cffi>=1.14.0",
]


dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/komAAmok/tls-client-python"
Documentation = "https://github.com/komAAmok/tls-client-python#readme"
Repository = "https://github.com/komAAmok/tls-client-python"
Issues = "https://github.com/komAAmok/tls-client-python/issues"

[tool.setuptools]
packages = ["tls_client"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "tls_client.__version__" }

[tool.setuptools.package-data]
tls_client = [
    "bin/*.so",
    "bin/*.dylib",
    "bin/*.dll",
    "py.typed",
]
